Add people.html first article

--- a/people.html
+++ b/people.html
@@ -43,19 +43,39 @@
             </div>
         </header>
 
-        <section style="background-color: orange;">
+        <section style="background-color: green;">
             <div class="container">
-                <h2 class="text-center">About</h2>
                 <div class="split">
                     <div>
-                        <p>Forget Saint Brendan and Joe Biden. Never mind Maureen O'Hara and Barak O'Bama.</p>
-                        <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora
-                            that maybe weren't much to write home about.</p>
+                        <img src="assets/images/Typhoid_Mary.jpg" alt="">
                     </div>
                     <div>
-                        <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections
-                            to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
-                            isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+                        <p>Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was a
+                         cook believed to have infected between 51 to 122 people with typhoid fever between 1900-1907 in New York. 
+                         The infections caused three confirmed deaths, with unconfirmed estimates of up to 50.</p>
+                        <p>Even after suspicions arose towards Mallon as the root cause she persisted in working as a cook, thereby exposing others to the disease. 
+                          Because of that, she was twice forcibly quarantined by authorities, eventually for the final two decades of her life. 
+                          Mallon died after a total of nearly 30 years in isolation.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section style="background-color: green;">
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <p>From 1900 to 1907, Mallon worked as a cook in the New York City area for eight families, seven of whom contracted typhoid.
+                            A pattern emerged of illness emerging in the homes a short time after Mallon's employment, who would then either leave or be fired after
+                            the outbreak. This followed Mallon around for the next 6 years, causing the death of two people, until authorities tracked the cases and
+                            caught up to her.</p>
+                        <p>She refused to cooperate, threatening authorities with a fork, and required 5 police officers to restrain her.
+                            It was discovered that Mallon was an asymptomatic carrier of the typhoid disease, possibly due to her mother contracting it
+                            during pregnancy.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="assets/images/Mallon-Mary_01.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -65,18 +85,22 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/freney2.jpg" alt="">
+                        <img src="assets/images/mary2.webp" alt="">
                     </div>
                     <div>
-                        <h2 class="text-center">Nature or Nurture?</h2>
-                        <p>It would be unwise to avoid speaking about the external factors that would have played a large
-                            role in the making of notoriety. So, we have a look at the Irish diaspora today and events that caused such large exoduses.
-                            Check out the where, why and what lead to some infamous exports here.</p>
+                        <p>Being the first case of an asymptomatic typhoid carrier, sadly a media frenzy ensued 
+                            and Mallon became a guinea pig for the medical community. She remained quarantined 
+                            for the next three years until she was allowed to leave when she agreed to never work
+                            as a cook again.</p>
+                        <p>Two unsuccessful years passed and Mallon returned to the better paying cook position.
+                             Immediately, typhoid outbreaks occurred and Mallon fled, often changing her surname. Again,
+                            and after two more deaths, the authorities caught up and this time Mallon was to spend the 
+                            rest of her life quarantined on Brother Island.</p>
+                        <p>Read the full story <a href="https://en.wikipedia.org/wiki/Mary_Mallon" target="_blank">here</a>.</p>
                     </div>
                 </div>
             </div>
         </section>
-        
 
         <footer>
             <div class="socials">
