--- a/people.html
+++ b/people.html
@@ -45,12 +45,13 @@
 
         <section style="background-color: green;">
             <div class="container">
+                <h2 class="text-center">Typhoid Mary </h2>
                 <div class="split">
                     <div>
                         <img src="assets/images/Typhoid_Mary.jpg" alt="">
                     </div>
                     <div>
-                        <p>Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was a
+                        <p>Mary Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was a
                          cook believed to have infected between 51 to 122 people with typhoid fever between 1900-1907 in New York. 
                          The infections caused three confirmed deaths, with unconfirmed estimates of up to 50.</p>
                         <p>Even after suspicions arose towards Mallon as the root cause she persisted in working as a cook, thereby exposing others to the disease. 
@@ -95,8 +96,71 @@
                         <p>Two unsuccessful years passed and Mallon returned to the better paying cook position.
                              Immediately, typhoid outbreaks occurred and Mallon fled, often changing her surname. Again,
                             and after two more deaths, the authorities caught up and this time Mallon was to spend the 
-                            rest of her life quarantined on Brother Island.</p>
+                            rest of her life quarantined on Brother Island, New York.</p>
                         <p>Read the full story <a href="https://en.wikipedia.org/wiki/Mary_Mallon" target="_blank">here</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section style="background-color: orange;">
+            <div class="container">
+                <h2 class="text-center">James Jameson</h2>
+                <div class="split">
+                    <div>
+                        <p>James Sligo Jameson (17/08/1856-17/08/1888) was a naturalist known for expeditions in Africa and Asia, and his collections
+                            of rare birds, butterflies, insects and drawings of native wildlife and peoples. However, he trully made his name from his 
+                            part in a grisly incident on one such expedition.</p>
+                        <p>Jameson was born into the wealthy Jameson Irish Whiskey family, grandson of its founder John Jameson. After a high level
+                            education in Scotland and England, he joined the army but soon realised that travel was his calling. He travelled extensively
+                            through Borneo, South Africa, the Kalahari Desert and Central Africa, the latter of which is where the incident took place.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="assets/images/james-jameson.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section style="background-color: green;">
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <img src="assets/images/stanley.jpg" alt="">
+                    </div>
+                    <div>
+                        <p>The Emin Pasha Relief Expedition (1886-1889) was an ill-fated operation, led by Henry Morton Stanley. Its purpose
+                            was to travel up the Congo river to rescue the beseiged governer of Equatoria, Emin Pasha. It was also the first to 
+                            penetrate into the heart of Africa, and many adventurers and naturalists joined up.</p>
+                        <p>According to first-hand accounts and of Jameson's own diary, the expedition arrived to a tribe that practiced ritualistic
+                            cannibalism. Jameson offered the price of six white handkerchiefs to purchase a young female slave. An avid draughtsman, 
+                            the girl was then offered to the tribe for the purpose of Jameson drawing the ritual.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section style="background-color: orange;">
+            <div class="container">
+                <h2 class="text-center">James Jameson</h2>
+                <div class="split">
+                    <div>
+                        <p>By Jameson's own records, he was incredulous of the practice. His part in the event was 
+                            supposedly a misunderstanding and that he made the purchase as a joke. In a letter to his wife he said:</p>
+                        <p style="font-style: italic;">“I sent my boy for six handkerchiefs, thinking it was all a joke, 
+                            and that they were not in earnest, but presently a man appeared, leading a young girl of about 
+                            10 years old by the hand, and then I witnessed the most horribly sickening sight I am ever likely to see in my life."</p>
+                        <p>According to Assad Farran, a Sudanese translator on the trip, Jameson expressed interest in seeing cannibalism first hand.
+                            And of the event itself Farran said:</p>
+                        <p style="font-style: italic;">“Jameson, in the meantime, made rough sketches of the horrible scenes...Jameson afterward went 
+                            to his tent, where he finished his sketches in watercolors.”</p>
+                        <p>Jameson passed away shortly after the accusations and the controversy was quickly swept under the carpet. However, the 
+                            media focus was enough so that such an expedition was the last of its kind.</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/jameson2.jpg" alt="">
                     </div>
                 </div>
             </div>
