Add section titles & hr

--- a/people.html
+++ b/people.html
@@ -43,14 +43,17 @@
             </div>
         </header>
 
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <h2 class="text-center">Typhoid Mary </h2>
+                <hr class="hr-center">
+                <br>
                 <div class="split">
                     <div>
                         <img src="assets/images/Typhoid_Mary.jpg" alt="">
                     </div>
                     <div>
+                        <br>
                         <p>Mary Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was a
                          cook believed to have infected between 51 to 122 people with typhoid fever between 1900-1907 in New York. 
                          The infections caused three confirmed deaths, with unconfirmed estimates of up to 50.</p>
@@ -62,7 +65,7 @@
             </div>
         </section>
         
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <div class="split">
                     <div>
@@ -82,7 +85,7 @@
             </div>
         </section>
 
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <div class="split">
                     <div>
@@ -103,9 +106,11 @@
             </div>
         </section>
 
-        <section style="background-color: orange;">
+        <section>
             <div class="container">
                 <h2 class="text-center">James Jameson</h2>
+                <hr class="hr-center">
+                <br>
                 <div class="split">
                     <div>
                         <p>James Sligo Jameson (17/08/1856-17/08/1888) was a naturalist known for expeditions in Africa and Asia, and his collections
@@ -123,7 +128,7 @@
             </div>
         </section>
 
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <div class="split">
                     <div>
@@ -142,9 +147,8 @@
             </div>
         </section>
 
-        <section style="background-color: orange;">
+        <section>
             <div class="container">
-                <h2 class="text-center">James Jameson</h2>
                 <div class="split">
                     <div>
                         <p>By Jameson's own records, he was incredulous of the practice. His part in the event was 
