--- a/places.html
+++ b/places.html
@@ -43,8 +43,11 @@
             </div>
         </header>
 
-        <section style="background-color: orange;">
+        <section>
             <div class="container">
+                <h2 class="text-center">The Diaspora</h2>
+                <hr class="hr-center">
+                <br>
                 <div class="split">
                     <div>
                         <p>A small island with a big footprint.</p>
@@ -64,12 +67,13 @@
             </div>
         </section>
 
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <div class="split">
                     <div>
                         <img src="assets/images/famineShip.webp" alt="">
                     </div>
+                    <br>
                     <div>
                         <p>However, this was not always the case as our ancestors did not have such privilages coming from
                             extremely impoverished circumstances. Many went from poverty in Ireland to poverty in a new land.
@@ -98,12 +102,13 @@
             </div>
         </section>
 
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <div class="split">
                     <div>
                         <img src="assets/images/irishMigrationMap1.jpg" alt="">
                     </div>
+                    <br>
                     <div>
                         <p>With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
                             but in the Himalayas, Patagonia, Mongolia and the Andes... it's clear to see how far Irish feet have
@@ -118,6 +123,9 @@
         <section>
             <div class="container">
                 <div class="container-table">
+                    <h2 class="text-center">The Why and Where</h2>
+                    <hr class="hr-center">
+                    <br>
                     <table class="table">
                         <thead>
                             <tr>
@@ -178,7 +186,7 @@
             </div>
         </section>
 
-        <section style="background-color: green;">
+        <section>
             <div class="container">
                 <h2 class="text-center">Today</h2>
                 <hr class="hr-center">
