--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="people.html">People</a></li>
-                <li><a href="events.html">Events</a></li>
+                <li><a href="places.html">Places</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
@@ -35,10 +35,103 @@
         </nav>
 
         <section>
-            <div class="container">
-                <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland">
+            <div class="">
+                <div class="contact">
+                    <div class="content">
+                        <h2>Contact Us</h2>
+                        <p>Wabalababumbum</p>
+                    </div>
+                    <div class="container-contact">
+                        <div class="contact-info">
+                            <div class="box"></div>
+                                <div class="icon">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    <h3>Address</h3>
+                                    <p>64 Zoo Lane,<br>Castlebar,<br>Co. Mayo,<br>A123B45</p>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icon">
+                                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    <h3>Email</h3>
+                                    <p>darragh.coleman1@gmail.com</p>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icon">
+                                    <i class="fa fa-phone" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    <h3>Phone</h3>
+                                    <p>087 1234567</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contact-form">
+                            <form >
+                                <h2>Send Message</h2>
+                                <div class="input-box">
+                                    <input type="text" name="" required>
+                                    <span>Full Name</span>
+                                </div>
+                                <div class="input-box">
+                                    <input type="email" name="" required>
+                                    <span>Email</span>
+                                </div>
+                                <div class="input-box">
+                                    <textarea name="" id="" cols="30" rows="10" required></textarea>
+                                    <span>Type your message here.</span>
+                                </div>
+                                <div class="input-box">
+                                    <input type="submit" name="" value="Send">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </section>
+
+        <footer>
+            <div class="socials">
+                <ul>
+                    <li>
+                        <a href="https://facebook.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://twitter.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://pinterest.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-pinterest-p"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+
+    <script src="https://kit.fontawesome.com/67367d875b.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
