Fix contact.html style, bugs for screen responsiveness

--- a/contact.html
+++ b/contact.html
@@ -35,66 +35,24 @@
         </nav>
 
         <section>
-            <div class="">
-                <div class="contact">
-                    <div class="content">
-                        <h2>Contact Us</h2>
-                        <p>Wabalababumbum</p>
+            <div class="contact-page">
+                <div class="contact-section">
+                    <div class="contact-info">
+                        <div><i class="fa fa-map-marker" aria-hidden="true"></i>64 Zoo Lane, Claremorris, Co. Mayo</div>
+                        <div><i class="fa fa-envelope-o" aria-hidden="true"></i>darragh.coleman1@gmail.com</div>
+                        <div><i class="fa fa-phone" aria-hidden="true">087 1234567</i></div>
                     </div>
-                    <div class="container-contact">
-                        <div class="contact-info">
-                            <div class="box"></div>
-                                <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    <h3>Address</h3>
-                                    <p>64 Zoo Lane,<br>Castlebar,<br>Co. Mayo,<br>A123B45</p>
-                                </div>
-                            </div>
-                            <div class="box">
-                                <div class="icon">
-                                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    <h3>Email</h3>
-                                    <p>darragh.coleman1@gmail.com</p>
-                                </div>
-                            </div>
-                            <div class="box">
-                                <div class="icon">
-                                    <i class="fa fa-phone" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    <h3>Phone</h3>
-                                    <p>087 1234567</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="contact-form">
-                            <form >
-                                <h2>Send Message</h2>
-                                <div class="input-box">
-                                    <input type="text" name="" required>
-                                    <span>Full Name</span>
-                                </div>
-                                <div class="input-box">
-                                    <input type="email" name="" required>
-                                    <span>Email</span>
-                                </div>
-                                <div class="input-box">
-                                    <textarea name="" id="" cols="30" rows="10" required></textarea>
-                                    <span>Type your message here.</span>
-                                </div>
-                                <div class="input-box">
-                                    <input type="submit" name="" value="Send">
-                                </div>
-                            </form>
-                        </div>
+                    <div class="contact-form">
+                        <h2>Contact Us</h2>
+                        <form class="contact" action="" method="post">
+                            <input type="text" name="name" class="contact-text-box" placeholder="Your Name" required>
+                            <input type="email" name="email" class="contact-text-box" placeholder="Your Email" required>
+                            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                            <input type="submit" name="submit" class="send-btn" value="Send">
+                        </form>
                     </div>
                 </div>
             </div>
-
         </section>
 
         <footer>
