Bugs contact.html margins for large screen devices

--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,11 @@
 
         <section>
             <div class="contact-page">
-                <div class="contact-section">
+                <div class="contact-section split">
                     <div class="contact-info">
-                        <div><i class="fa fa-map-marker" aria-hidden="true"></i>64 Zoo Lane, Claremorris, Co. Mayo</div>
-                        <div><i class="fa fa-envelope-o" aria-hidden="true"></i>darragh.coleman1@gmail.com</div>
-                        <div><i class="fa fa-phone" aria-hidden="true">087 1234567</i></div>
+                        <div><i class="fa fa-map-marker" aria-hidden="true"></i>  64, Claremorris, Co. Mayo</div>
+                        <div><i class="fa fa-envelope-o" aria-hidden="true"></i> darragh.coleman1@gmail.com</div>
+                        <div><i class="fa fa-phone" aria-hidden="true"></i> 087 1234567</div>
                     </div>
                     <div class="contact-form">
                         <h2>Contact Us</h2>
