Fix bugs on index.html card a link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <br>
                         <p>It would be unwise to avoid speaking about the external factors that would have played a large
                             role in the making of notoriety. So, we have a look at the Irish diaspora today and events that caused such large exoduses.
-                            Check out the where, why and what lead to some infamous exports here.</p>
+                            Check out the where, why and what lead to some infamous exports in our 'Places' page <a href="places.html" >here</a>.</p>
                     </div>
                 </div>
             </div>
@@ -91,19 +91,19 @@
                 <div class="card-image card1"></div>
                 <h2>Typhoid Mary</h2>
                 <p>The seemingly innocuous cook in New York who carried a deadly secret...</p>
-                <a href="#">Read more</a>
+                <a href="people.html">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card2"></div>
                 <h2>James Jameson</h2>
                 <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
-                <a href="#">Read more</a>
+                <a href="people.html">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card3"></div>
                 <h2>Andrew Stoney</h2>
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
-                <a href="#">Read more</a>
+                <a href="places.html">Read more</a>
             </div>
         </section>
 
