--- a/people.html
+++ b/people.html
@@ -102,6 +102,7 @@
                              Immediately, typhoid outbreaks occurred and Mallon fled, often changing her surname. Again,
                             and after two more deaths, the authorities caught up and this time Mallon was to spend the 
                             rest of her life quarantined on Brother Island, New York.</p>
+                            <br>
                         <p>Read the full story <a href="https://en.wikipedia.org/wiki/Mary_Mallon" target="_blank">here</a>.</p>
                     </div>
                 </div>
@@ -166,10 +167,79 @@
                             to his tent, where he finished his sketches in watercolors.”</p>
                         <p>Jameson passed away shortly after the accusations and the controversy was quickly swept under the carpet. However, the 
                             media focus was enough so that such an expedition was the last of its kind.</p>
-                            <br>
+                        <br>
+                        <p>Read the full story <a href="https://en.wikisource.org/wiki/Dictionary_of_National_Biography,_1885-1900/Jameson,_James_Sligo" target="_blank">here</a>.</p>
+                        <br>
                     </div>
                     <div>
                         <img src="assets/images/jameson2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <h2 class="text-center">Andrew Stoney</h2>
+                <hr class="hr-center">
+                <br>
+                <div class="split">
+                    <div>
+                        <img src="assets/images/stoney.jpg" alt="">
+                    </div>
+                    <div>
+                        <br>
+                        <p>Andrew Robinson Stoney, later renamed Andrew Robinson Stoney-Bowes, (1747-1810) was an 
+                            Anglo-Irish member of parliament, high sheriff, soldier and criminal.</p>
+                        <p>Stoney grew up in County Tipperary in Ireland. His grandfather, Thomas Stoney, had migrated to 
+                            Ireland from Yorkshire, England, in the wake of the Williamite conquest of Ireland, 1689-91.</p>
+                        <p>While Andrew Stoney-Bowes was a member of parliament for Newcastle-upon-Tyne (1780-4) and also High Sheriff of Durham,
+                             he became most well-known for his marriage to Mary Eleanor Bowes, "The Unhappy Countess".</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section>
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <p>Stoney's first wife, Hannah, died prematurely was it was widely believed that Stoney
+                             caused her death to assume her inheritance.</p>
+                        <p>In 1777 Mary Eleanor Bowes, a widowed countess, met the charming adventurer Andrew Robinson Stoney 
+                            who manipulated his way into her household.</p>
+                        <br>
+                        <p>He insisted on fighting a duel in Mary's honour with the editor of The Morning Post newspaper,
+                             which had published articles about her private life. In fact, he had himself written the articles that criticised her,
+                              and the duel between Stoney and the newspaper's editor was probably staged. Pretending to be mortally wounded in the duel, 
+                              Stoney persuaded the countess as his dying wish to marry him. Miraculously, Stoney(now Stoney-Bowes) recovered immediately after the marriage.</p>
+                        <br>
+                    </div>
+                    <div>
+                        <img src="assets/images/maryBowes.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <img src="assets/images/stoney2.jpg" alt="">
+                    </div>
+                    <div>
+                        <br>
+                        <p>After their marriage, the physical, mental and financial abuse began. He imprisoned her in her own house, 
+                            and forced her and one of her daughters to go into exile in Paris, fathering numerous illegitimate children in the meantime.</p>
+                        <p>Finally, in 1785, with the help of loyal maids, the Countess managed to escape his custody and filed for divorce. Stoney then abducted Mary
+                             with the help of accomplices, beat and threatened to kill her. The countess was eventually rescued and Stoney was arrested, later spending
+                             his last days in a London Prison.</p>
+                        <p>This scandal became the inspiration behind William Thackeray's novel "The Luck of Barry Lyndon" which and subsequently
+                            a stunning film directed by Stanley Kubrick.
+                        </p>
+                        <br>
+                        <p>Read the full story <a href="https://en.wikipedia.org/wiki/Andrew_Robinson_Stoney" target="_blank">here</a>.</p>
                     </div>
                 </div>
             </div>
